--- a/index.html
+++ b/index.html
@@ -640,6 +640,8 @@
         zoom: 18,
       };
       var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+      var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+
     }
   </script>
   <!-- Google Map -->
