--- a/index.html
+++ b/index.html
@@ -641,6 +641,8 @@
       };
       var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
       var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+      var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+
 
     }
   </script>
